--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1779,6 +1779,18 @@
 	"hub_plan_unlimited_bandwidth": {
 		"message": "Unlimited Bandwidth"
 	},
+	"hub_plan_already_premium_subscriber": {
+		"message": "You are already a premium subscriber"
+	},
+	"hub_plan_already_plus_subscriber": {
+		"message": "You are already a plus subscriber"
+	},
+	"hub_plan_keep_your_current_plan_or_upgrade": {
+		"message": "Keep your current plan or upgrade"
+	},
+	"hub_plan_choose_an_option": {
+		"message": "Choose an option"
+	},
 	"enable_when_paused": {
 		"message": "To use this function, Resume Ghostery."
 	},
