--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1749,6 +1749,12 @@
 	"hub_browser_updates_and_promotions": {
 		"message": "updates & promotions."
 	},
+	"hub_browser_skip": {
+		"message": "Skip"
+	},
+	"hub_browser_we_take_your_privacy_very_seriously": {
+		"message": "We take your privacy very seriously. Learn more"
+	},
 	"enable_when_paused": {
 		"message": "To use this function, Resume Ghostery."
 	},
