--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1749,6 +1749,15 @@
 	"ghostery_browser_hub_onboarding_header_title_plan_choices": {
 	  "message": "Ghostery Browser Hub - Plan Choices"
 	},
+	"ghostery_browser_hub_onboarding_welcome": {
+		"message": "Welcome to Ghostery Browser"
+	},
+	"ghostery_browser_hub_onboarding_lets_begin": {
+		"message": "Let's begin by choosing your privacy settings. This will be quick, we promise!"
+	},
+	"ghostery_browser_hub_onboarding_lets_do_this": {
+		"message": "Let's do this"
+	},
 	"enable_when_paused": {
 		"message": "To use this function, Resume Ghostery."
 	},
