GH-2207: Onboarding - Success Screen (#638)
* Make skeleton for success view

* Copy jsx over from WelcomeView

* Make success screen, need to add image

* Add image and adjust spacing

* Re-add default view for original hub

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1758,6 +1758,15 @@
 	"ghostery_browser_hub_onboarding_lets_do_this": {
 		"message": "Let's do this"
 	},
+	"ghostery_browser_hub_onboarding_yay_youre_all_set": {
+		"message": "Yay! You're all set."
+	},
+	"ghostery_browser_hub_onboarding_start_browsing_the_web_with": {
+		"message": "Start browsing the web with"
+	},
+	"ghostery_browser_hub_onboarding_lets_search": {
+		"message": "Let's search"
+	},
 	"enable_when_paused": {
 		"message": "To use this function, Resume Ghostery."
 	},
