--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1722,6 +1722,9 @@
 	"hub_create_account_label_password_invalid_length": {
 		"message": "Use between 8 and 50 characters."
 	},
+	"hub_create_account_confirm_password_do_not_match": {
+		"message": "Passwords do not match."
+	},
 	"hub_create_account_already_have_account": {
 		"message": "Already have a Ghostery Account?"
 	},
