GH-2211: Onboarding - Status Bar (#641)
* Make progress bar skeleton

* Add ghosty images and sass to display them

* Add labels

* Refactor labels

* Add dotted border after incomplete steps except last

* Make labels and ghosties navLinks

* Reset default view, done with testing

* Update propTypes and add comments

* Change back to default view

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1752,6 +1752,15 @@
 	"ghostery_browser_hub_onboarding_header_title_plan_choices": {
 	  "message": "Ghostery Browser Hub - Plan Choices"
 	},
+	"ghostery_browser_hub_onboarding_privacy": {
+		"message": "Privacy"
+	},
+	"ghostery_browser_hub_onboarding_search": {
+		"message": "Search"
+	},
+	"ghostery_browser_hub_onboarding_plan": {
+		"message": "Plan"
+	},
 	"ghostery_browser_hub_onboarding_welcome": {
 		"message": "Welcome to Ghostery Browser"
 	},
