--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1366,6 +1366,9 @@
 	"hub_upgrade_additional_protection": {
 		"message": "Additional Protection"
 	},
+	"hub_upgrade_maximum_protection": {
+		"message": "Maximum Protection"
+	},
 	"hub_upgrade_browser_tracker_blocking": {
 		"message": "Browser Tracker Blocking"
 	},
@@ -1770,6 +1773,69 @@
 	"ghostery_browser_hub_onboarding_lets_do_this": {
 		"message": "Let's do this"
 	},
+	"ghostery_browser_hub_onboarding_your_privacy_plan": {
+		"message": "Your Privacy Plan"
+	},
+	"ghostery_browser_hub_onboarding_based_on_your_privacy_preferences": {
+		"message": "Based on your privacy preferences"
+	},
+	"ghostery_browser_hub_onboarding_ad_free_with_ghostery_plus_subscription": {
+		"message": "Ad-free with Ghostery Plus subscription"
+	},
+	"ghostery_browser_hub_onboarding_ad_free_promo": {
+		"message": "40% off for the first 12 months"
+	},
+	"ghostery_browser_hub_onboarding_ad_free_promo_description": {
+		"message": "Get to what you want faster. A plus subscription gives Ghostery the support we need to provide YOU with an ad-free experience."
+	},
+	"ghostery_browser_hub_onboarding_or": {
+		"message": "OR"
+	},
+	"ghostery_browser_hub_onboarding_keep": {
+		"message": "Keep"
+	},
+	"ghostery_browser_hub_onboarding_upgrade": {
+		"message": "Upgrade"
+	},
+	"ghostery_browser_hub_onboarding_start_trial": {
+		"message": "Start Trial"
+	},
+	"ghostery_browser_hub_onboarding_see_all_plans": {
+		"message": "See all plans"
+	},
+	"ghostery_browser_hub_onboarding_private_search": {
+		"message": "Private search"
+	},
+	"ghostery_browser_hub_onboarding_tracker_protection": {
+		"message": "Tracker protection"
+	},
+	"ghostery_browser_hub_onboarding_speedy_page_loads": {
+		"message": "Speedy page loads"
+	},
+	"ghostery_browser_hub_onboarding_intelligence_technology": {
+		"message": "Intelligence technology"
+	},
+	"ghostery_browser_hub_onboarding_ad_free": {
+		"message": "Ad free"
+	},
+	"ghostery_browser_hub_onboarding_supports_ghosterys_mission": {
+		"message": "Supports Ghostery's Mission"
+	},
+	"ghostery_browser_hub_onboarding_unlimited_bandwidth": {
+		"message": "Unlimited Bandwidth"
+	},
+	"ghostery_browser_hub_onboarding_already_premium_subscriber": {
+		"message": "You are already a premium subscriber"
+	},
+	"ghostery_browser_hub_onboarding_already_plus_subscriber": {
+		"message": "You are already a plus subscriber"
+	},
+	"ghostery_browser_hub_onboarding_keep_your_current_plan_or_upgrade": {
+		"message": "Keep your current plan or upgrade"
+	},
+	"ghostery_browser_hub_onboarding_choose_an_option": {
+		"message": "Choose an option"
+  },
 	"ghostery_browser_hub_onboarding_create_a_ghostery_account": {
 		"message": "Create a Ghostery Account"
 	},
