Change CTA button string

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1887,8 +1887,8 @@
 	"ghostery_browser_hub_onboarding_surf_with_ease": {
 		"message": "Now you can surf with the greatest of ease."
 	},
-	"ghostery_browser_hub_onboarding_lets_search": {
-		"message": "Let's search"
+	"ghostery_browser_hub_onboarding_start_browsing": {
+		"message": "Start Browsing"
 	},
 	"ghostery_browser_hub_onboarding_which_privacy_plan": {
 		"message": "Which privacy plan is right for you?"
