--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -2419,6 +2419,6 @@
 	  "message": "Pick a default engine for all your searches."
 	},
   	"ghostery_browser_hub_blocking_settings_view_toast_error_message": {
-	  "message": "Error: Please answer all questions"
+	  "message": "Please answer all questions"
 	}
 }
