Update You are already a plus/premium subscriber copy

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1831,10 +1831,10 @@
 		"message": "Unlimited Bandwidth"
 	},
 	"ghostery_dawn_onboarding_already_premium_subscriber": {
-		"message": "You are already a premium subscriber"
+		"message": "You are already a Premium Subscriber"
 	},
 	"ghostery_dawn_onboarding_already_plus_subscriber": {
-		"message": "You are already a plus subscriber"
+		"message": "You are already a Plus Subscriber"
 	},
 	"ghostery_dawn_onboarding_keep_your_current_plan_or_upgrade": {
 		"message": "Keep your current plan or upgrade"
