Minor copy fixes

--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1795,7 +1795,7 @@
 		"message": "40% off for the first 12 months"
 	},
 	"ghostery_dawn_onboarding_ad_free_promo_description": {
-		"message": "Get to what you want faster. A plus subscription gives Ghostery the support we need to provide YOU with an ad-free experience."
+		"message": "Get to what you want faster. A Plus subscription gives Ghostery the support we need to provide YOU with an ad-free experience."
 	},
 	"ghostery_dawn_onboarding_or": {
 		"message": "OR"
@@ -1825,7 +1825,7 @@
 		"message": "Intelligence technology"
 	},
 	"ghostery_dawn_onboarding_ad_free": {
-		"message": "Ad free"
+		"message": "Ad-free"
 	},
 	"ghostery_dawn_onboarding_supports_ghosterys_mission": {
 		"message": "Supports Ghostery's mission"
