--- a/_locales/en/messages.json
+++ b/_locales/en/messages.json
@@ -1777,7 +1777,7 @@
 		"message": "We've centralized online privacy by integrating our signature as well as novel technologies."
 	},
 	"ghostery_dawn_onboarding_welcome_message": {
-		"message": "Our browser protects your data and blocks bloatware so that you can surf privately and over 2x faster than with Chrome."
+		"message": "Ghostery Dawn protects your data from trackers so that you can surf securely and up to 3x faster than with Chrome."
 	},
 	"ghostery_dawn_onboarding_lets_do_this": {
 		"message": "Set up My Browser"
